--- a/package.json
+++ b/package.json
@@ -1,13 +1,4 @@
 {
-  "name": "communidrive",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
   "dependencies": {
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
@@ -17,7 +8,24 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-react": "^7.32.2",
+    "prettier": "^2.8.8",
     "typescript": "^4.9.4"
   },
-  "private": true
+  "main": "node_modules/expo/AppEntry.js",
+  "name": "communidrive",
+  "private": true,
+  "scripts": {
+    "android": "expo start --android",
+    "format": "prettier --write **/*.{json,ts,tsx}",
+    "ios": "expo start --ios",
+    "lint": "eslint --ext .ts,.tsx .",
+    "start": "expo start",
+    "web": "expo start --web"
+  },
+  "version": "1.0.0"
 }
