--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
-  "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": { "@Assets/*": ["assets/*"], "@Components/*": ["src/components/*"] },
     "strict": true
-  }
+  },
+  "extends": "expo/tsconfig.base"
 }
