--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
     "prettier": "^2.8.8",
+    "react-native-dotenv": "^3.4.8",
     "typescript": "^4.9.4"
   },
   "main": "node_modules/expo/AppEntry.js",
