--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "paths": {
       "@Assets/*": ["assets/*"],
       "@Components/*": ["src/components/*"],
+      "@Providers/*": ["src/providers/*"],
       "@Screens/*": ["src/screens/*"],
       "@Utils/*": ["src/utils/*"]
     },
