--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.15",
     "expo-secure-store": "~12.1.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.21.0",
     "formik": "^2.2.9",
