--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -9,6 +10,7 @@
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.21.0",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-paper": "^5.7.2",
