--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "formik": "^2.2.9",
     "moment": "^2.29.4",
     "react": "18.2.0",
-    "react-native": "0.71.7",
+    "react-native": "0.71.8",
+    "react-native-maps": "1.3.2",
     "react-native-paper": "^5.7.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
