--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.4.6",
     "@react-native-community/datetimepicker": "6.7.3",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/native": "^6.1.6",
@@ -15,8 +16,10 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-maps": "1.3.2",
     "react-native-paper": "^5.7.2",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "yup": "^1.1.1",
