--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-maps": "1.3.2",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-paper": "^5.7.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
